<resources>
    <string name="app_name">Inventory</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_order">Order</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="in_stock">In Stock: </string>
    <string name="sell_button">$ell</string>

    <string name="empty_view_title_text">Inventory empty</string>
    <string name="empty_view_subtitle_text">Click on the button on the low right corner to add a product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="category_overview">Overview</string>
    <string name="product_name">Name</string>
    <string name="hint_product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="hint_product_price">€</string>
    <string name="product_supplier">Supplier</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="product_supplier_email">Supplier email</string>
    <string name="hint_product_supplier_email">Email</string>
    <string name="plus_1_button">+1</string>
    <string name="minus_1_button">-1</string>
    <string name="add_image_text">Click to add an image of the product</string>
    <string name="change_image_text">Click to change the image of the product</string>
    <string name="image_needed_text">An image is needed</string>
    <string name="name_needed_text">A name is needed</string>
    <string name="quantity_needed_text">Quantity is needed</string>
    <string name="price_needed_text">Price is needed</string>
    <string name="supplier_needed_text">A supplier is needed</string>
    <string name="supplier_email_needed_text">An email is needed</string>
    <string name="intentType">image/*</string>
    <string name="selectImage">Select Image</string>
    <string name="unsaved_changes">Product not saved</string>
    <string name="back_to_edit_button">Continue</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="negative_quantity_check">Can\'t set a negative quantity</string>
    <string name="picture_check">picture requested</string>
</resources>
