<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:layout_weight="6"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_quantity" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_quantity"

            android:inputType="number" />

        <Button
            android:id="@+id/plus_button"
            style="@style/EditButtonStyle"
            android:text="@string/plus_1_button" />

        <Button
            android:id="@+id/minus_button"
            style="@style/EditButtonStyle"
            android:text="@string/minus_1_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier" />

        <EditText
            android:id="@+id/edit_product_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier_email" />

        <EditText
            android:id="@+id/edit_product_supplier_email"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_email"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/add_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/add_image_text"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>